# Installer-vllm

./: .gitattributes  .gitignore  Makefile  PROGRESS.md  README.md  install.sh  pyproject.toml
src/ehc/: __init__.py  cli.py
src/ehc/commands/: deps.py  setup.py  stack.py  vllm.py
src/ehc/core/: detect.py  hf_meta.py  optimizer.py  stack.py  status.py
src/ehc/core/install/: dispatcher.py  ubuntu.py
src/ehc/tui/: app.py  styles.tcss
src/ehc/tui/screens/: detect.py  done.py  help.py  install_deps.py  models.py  stack_setup.py  welcome.py
