[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehc-installer"
version = "0.1.0"
description = "EHC HealthCare AI stack installer (Linux/Ubuntu)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "textual>=0.85",
    "questionary>=2.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.scripts]
ehc = "ehc.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyinstaller>=6",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]
